[package]
name = "atom-token"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
mongodb = "3.2"
futures = "0.3"
serde_json = "1"
serde_default = "0.2"
serde-inline-default = "0.2"
chrono = { version = "0.4.39", features = ["serde"] }
rand = "0.9.0"
async-recursion = "1.1.1"

[dependencies.tokio]
version = "1"
features = [
    "macros",
    "rt-multi-thread"
]

[dependencies.serde]
version = "1"
features = [
    "derive"
]
