[package]
name = "atom-token"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", optional = true }
mongodb = { version = "3.2", optional = true }
futures = { version = "0.3", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
rand = { version = "0.9", optional = true }
async-recursion = { version = "1.1", optional = true }
serde_json = "1"
serde_default = "0.2"
serde-inline-default = "0.2"

[dependencies.tokio]
version = "1"
features = [
    "macros",
    "rt-multi-thread"
]

[dependencies.serde]
version = "1"
features = [
    "derive"
]

[features]
default = [ ]
core = [ "dep:mongodb", "dep:futures", "dep:axum", "dep:chrono", "dep:rand", "dep:async-recursion" ]
